--- a/Apple_store/styles/style.scss
+++ b/Apple_store/styles/style.scss
@@ -35,37 +35,85 @@ body {
   background: $bg-color;
   overflow-x: hidden;
 }
+
 .body-ipad,
 .body-iphone {
   background: #f5f5f7;
 }
 
-@media (min-width: 1068.98px) {
+// .nav_items_xmark {
+//   display: none;
+// }
 
-  .nav_items_xmark {
-    display: none;
+@media (min-width: 279.98px) and (max-width: 2559.98px) {
+  html {
+    font-size: 62.5%;
+    overflow-x: hidden;
   }
 
-  .presentcard_mac,
-  .gallery-center-image .box-container-center-image,
-  .gallery-center-image .box-container-center-image2,
-  .one_mac {
-    @include grid(33rem);
+  // mac page
+  .home_mac {
+    min-height: 70vh;
+
+    .big_text_xl_0 {
+      font-size: 3rem;
+      font-weight: 500;
+    }
+    .content {
+      padding: 0;
+    }
+  }
+
+  .presentcard_mac {
+    @include grid(30rem);
     max-width: 1440px;
-    //padding: 1rem;
     column-gap: 0;
   }
 
-  .mac_box_container,
-  .mac_info_gallery .mac_info_container {
-    @include grid(33rem);
-    max-width: 1440px;
-    column-gap: 2rem;
-  }
+  // .presentcard_mac,
+  // .gallery-center-image .box-container-center-image,
+  // .gallery-center-image .box-container-center-image2,
+  // .one_mac {
+  //   @include grid(33rem);
+  //   max-width: 1440px;
+  //   //padding: 1rem;
+  //   column-gap: 0;
+  // }
 
-  .presentcard {
-    .content {
-      margin-top: 40rem;
+  // .mac_box_container,
+  // .mac_info_gallery .mac_info_container {
+  //   @include grid(33rem);
+  //   max-width: 1440px;
+  //   column-gap: 2rem;
+  // }
+
+  // .presentcard {
+  //   .content {
+  //     margin-top: 40rem;
+  //   }
+  // }
+
+  @media (min-width: 279.98px) and (max-width: 1439.98px) {
+    html {
+      font-size: 60%;
+    }
+
+    .nav_items_xmark {
+      display: none;
+    }
+    // macPro
+    .dark {
+      min-height: 45vh;
+      .macBook_pro {
+        min-height: 48vh;
+      }
+    }
+
+    .presentcard_mac {
+      @include grid(30rem);
+      max-width: 1340px;
+      min-height: 555px;
+      column-gap: 0;
     }
   }
 }
@@ -79,6 +127,22 @@ body {
   #nav_search {
     display: block;
   }
+  .nav_items_xmark {
+    display: block;
+
+    display: flex;
+    justify-content: flex-start;
+    gap: 47%;
+    // padding-left: 2rem;
+    // padding-top: 2rem;
+    padding: 1.5rem 2rem 1rem;
+    width: 100%;
+
+    i {
+      font-size: 3.5rem;
+    }
+  }
+
   .header {
     display: flex;
     justify-content: space-between;
@@ -133,7 +197,74 @@ body {
     }
   }
 
+  // Mac page
+
+  .home_mac {
+    min-height: 60vh;
+
+    .big_text_xl_0 {
+      font-size: 3rem;
+      font-weight: 500;
+    }
+    .content {
+      padding: 0;
+    }
+  }
+
+  .dark {
+    min-height: 40vh;
+    background-color: black;
+  }
+  .macBook_pro {
+    margin-top: 3rem;
+    min-height: 45vh;
+    background-size: auto;
+    background-position: bottom;
+    display: block;
+  }
+  // Presentcard mac page
+  .presentcard_mac {
+    @include grid(25rem);
+    max-width: 736px;
+    column-gap: 0;
+  }
+  // info boxes under presencard
+  .gallery2 {
+    min-height: 48vh;
+    background-color: #696868;
+  }
+
+  .mac_box_container,
+  .mac_info-box,
+  .mac_info_gallery {
+    columns: 2 25rem;
+    column-gap: 1rem;
+    max-width: 736px;
+    margin: auto;
+  }
+
+  .content_gallery-center-image,
+  .one_mac {
+    max-width: 736px;
+    margin: auto;
+  }
+
+  .gallery-center-image {
+    max-width: 736px;
+    margin: auto;
+    .box-container-center-image {
+      min-height: 48vh;
+      background-size: cover;
+    }
+  }
+
   @media (min-width: 297.98px) and (max-width: 768.98px) {
+    #menu-btn {
+      display: inline-block;
+    }
+    #nav_search {
+      display: block;
+    }
     // About Ipad
     .about_ipad {
       height: 40vh;
@@ -163,6 +294,36 @@ body {
       .box-gallery6 {
         min-height: 40vh;
         margin-bottom: 1rem;
+      }
+    }
+
+    // Mac page < 768px
+    .home_mac {
+      min-height: 40vh;
+      margin-bottom: 3rem;
+      background-size: contain;
+      background-position: bottom;
+      display: block;
+
+      .big_text_xl_0 {
+        font-size: 3rem;
+        font-weight: 500;
+      }
+      .content {
+        padding: 0;
+      }
+    }
+
+    .dark {
+      min-height: 40vh;
+      background-color: black;
+
+      .macBook_pro {
+        margin-top: 3rem;
+        min-height: 40vh;
+        background-size: contain;
+        background-position: bottom;
+        display: block;
       }
     }
   }
@@ -201,9 +362,9 @@ body {
       margin-top: 3rem;
       height: 40vh;
       background-size: auto;
-      background-position:bottom;
+      background-position: bottom;
       display: block;
-      
+
       .content_right {
         padding: 0 1rem;
       }
@@ -225,7 +386,7 @@ body {
     }
   }
 
-  @media (min-width: 297.98px) and (max-width: 375.98px){
+  @media (min-width: 297.98px) and (max-width: 375.98px) {
     html {
       font-size: 45%;
     }
@@ -257,9 +418,9 @@ body {
       margin-top: 3rem;
       height: 35vh;
       background-size: auto;
-      background-position:bottom;
+      background-position: bottom;
       display: block;
-      
+
       .content_right {
         padding: 0 1rem;
       }
@@ -280,33 +441,4 @@ body {
       }
     }
   }
-
-  // Mac page
-
-  .home_mac {
-    min-height: 50vh;
-    .big_text_xl_0 {
-      font-size: 4rem;
-      font-weight: 500;
-      
-    }
-    .content{
-      padding: 0;
-    }
-  }
-
-  .dark{
-    min-height: 40vh;
-    background-color: black;
-
-  }
-  .macBook_pro {
-      margin-top: 3rem;
-      min-height: 40vh;
-      background-size: auto;
-      background-position: bottom;
-      display: block;
-      
-      
-    }
 }
