--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -923,11 +923,7 @@ footer .legal ul li:last-child {
     padding-bottom: 4rem;
   }
   .img_link_support .img_link_navx {
-    flex-direction: column;
-    padding-top: 50px;
-    /*  border: 1px 1px 1px 1px solid#7b7b7b33; */
-    /* border-top: 1px solid#7b7b7b33;
-    border-bottom: 1px solid#7b7b7b33; */
+    border: 1px 0px 1px 0px solid rgba(123, 123, 123, 0.2);
   }
 }
 .support_search {
@@ -2047,7 +2043,7 @@ body {
   }
   .presentcard_mac {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(37rem, 1fr));
     gap: 1.5rem;
     max-width: 1440px;
     -moz-column-gap: 0;
@@ -2069,7 +2065,7 @@ body {
   }
   .presentcard_mac {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(37rem, 1fr));
     gap: 1.5rem;
     max-width: 1340px;
     min-height: 555px;
