--- a/Apple_store/partials/_table.scss
+++ b/Apple_store/partials/_table.scss
@@ -201,6 +201,7 @@
     .col{
         .thead{
             width: 250px;
+            padding-top: 5rem;
             .price{padding-top: 5px;
             }
             
@@ -216,12 +217,27 @@
 @media screen and (max-width: 960px){
     .phone-table, .mac-table, .ipad-table{
         flex-wrap: wrap;
-        width: 600px;
+        width: 550px;
+        
         
         .col{
             .thead{
                 
             }
         }
+    }
+}
+@media screen and (max-width: 850px){
+    .watch-table{
+        flex-wrap: wrap;
+        justify-content: start;
+        width: 550px;
+        column-gap: 50px;
+    }
+}
+@media screen and (max-width: 570px ){
+    .phone-table, .mac-table, .ipad-table, .watch-table{
+        justify-content: center;
+        width: 250px;
     }
 }
