--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -109,6 +109,17 @@
       margin-bottom: 1rem;
     }
 
+    .buy_button {
+      color: white;
+      cursor: pointer;
+      font-size: 2rem;
+      font-weight: 300;
+      background-color: #0071e3;
+      padding: 0.8rem 1.5rem;
+      margin-right: 1rem;
+      border-radius: 2.3rem;
+    }
+
     ul li {
       list-style: none;
       display: inline;
@@ -164,6 +175,17 @@
       font-weight: 200;
       margin-bottom: 0.5rem;
       margin-bottom: 1rem;
+    }
+
+    .buy_button {
+      color: white;
+      cursor: pointer;
+      font-size: 2rem;
+      font-weight: 300;
+      background-color: #0071e3;
+      padding: 0.8rem 1.5rem;
+      margin-right: 1rem;
+      border-radius: 2.3rem;
     }
 
     ul li {
