--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -377,29 +377,10 @@
 }
 
 //Support page
-.link_section_support{
-  text-align: left;
-  margin-left:50rem;
-  padding-top: 3rem;
-  // border-top: 1px solid lightgray;
-  h2{
-    font-size: 2.5rem;
-    font-weight: 400;
-  }
-  a{
-    font-size: 2rem;
-    font-weight: 200;
-  }
-    .fa-chevron-right {
-      font-size: 1rem;
-    }
-}
-
 .text_section_support1{
   max-width: 50%;
   margin:auto;
   padding: 3rem;
-  border-bottom: 1px solid lightgray;
   flex-direction: row;
   h2 {
       font-size: 2.5rem;
@@ -413,14 +394,15 @@
     font-size: 2rem;
     font-weight: 200;
   }
+  .testar{
+    flex-direction: row;
+  }
 }
 
 .text_section_support2 {
   max-width: 50%;
   margin: auto;
   padding: 3rem;
-  border-bottom: 1px solid lightgray;
-  // border: 1px solid black;
 
   h2 {
     font-size: 2.5rem;
@@ -436,4 +418,29 @@
     font-size: 2rem;
     font-weight: 200;
   }
+}
+
+.link_section_support {
+  text-align: left;
+  margin-left: 27%;
+  padding-top: 3rem;
+
+  h2 {
+    font-size: 2.5rem;
+    font-weight: 400;
+  }
+
+  a {
+    font-size: 2rem;
+    font-weight: 200;
+  }
+
+  .fa-chevron-right {
+    font-size: 1rem;
+  }
+}
+
+// Full line border
+.full_line_border{
+  border:1px solid rgb(245, 241, 241);
 }
