--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -623,7 +623,6 @@
 
 .support_img_nav {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   min-height: 15vh;
@@ -646,6 +645,28 @@
     span {
       font-size: 2.5rem;
       font-weight: 300;
+    }
+  }
+}
+@media screen and (max-width: 620px){
+  .support_img_nav{
+    .img_nav_support{
+      flex-wrap: wrap;
+      width: 280px;
+      gap: 2.5rem;
+      justify-content: space-between;
+      padding-bottom: 2rem;
+    .img_nav4{
+      padding-right: 20px;
+    }
+    }
+  }
+}
+@media screen and (max-width: 375px){
+  .support_img_nav{
+    .img_nav_support{
+      width: 230px;
+      gap: 1rem;
     }
   }
 }
@@ -695,20 +716,26 @@
   }
 }
 @media (max-width: 700px){
-  .img_link_support{
-    flex-direction: column;
-    
-    a{
-      margin: 1rem 1rem;
-      width: 75vw;
-      align-self: center;
-      padding-top: 4rem;
-      padding-bottom: 4rem;
-    }
-    .img_link_navx{
-
-      border: 1px 0px 1px 0px solid#7b7b7b33; 
+  .support_link_nav{
+    .img_link_support{
+      flex-direction: column;
       
+      a{
+        margin: 0;
+        width: 75vw;
+        align-self: center;
+        padding-top: 4rem;
+        padding-bottom: 4rem;
+        padding-left: 0;
+        padding-right: 0;
+        
+      }
+      .img_link_navx{
+        border-top: 1px solid #7b7b7b33;
+        border-bottom: 1px solid #7b7b7b33;
+        border-left: transparent;
+        border-right: transparent;
+      }
     }
   }
 }
@@ -728,7 +755,7 @@
     justify-content: center;
     width: 100%;
     padding-bottom: 5rem;
-    border-bottom: 1px solid #7b7b7b;
+    
     
     .form_search{
       display: flex;
@@ -753,6 +780,14 @@
       font-size: 3rem;
       color: #515050;
       background: none;
+    }
+  }
+}
+@media screen and (max-width: 700px){
+  .support_search{
+    padding: 5rem;
+    .search-container{
+      padding:0;
     }
   }
 }
