--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -394,7 +394,7 @@
 //Change ipad img - 2 ipad image - white picture
 .change_ipad {
   background: url(/Apple_store/images/ipad_images/i444.png) no-repeat;
-  background-size: cover;
+  background-size: auto;
   background-position: center;
   display: flex;
   flex-direction: column;
@@ -719,21 +719,6 @@
     }
   }
 }
-<<<<<<< HEAD
-@media (max-width: 700px) {
-  .img_link_support {
-    flex-direction: column;
-
-    a {
-      margin: 1rem 1rem;
-      width: 75vw;
-      align-self: center;
-      padding-top: 4rem;
-      padding-bottom: 4rem;
-    }
-    .img_link_navx {
-      border: 1px 0px 1px 0px solid#7b7b7b33;
-=======
 @media (max-width: 700px){
   .support_link_nav{
     .img_link_support{
@@ -755,7 +740,6 @@
         border-left: transparent;
         border-right: transparent;
       }
->>>>>>> 85a3333120f432ca23ddf1e7d215d9fe7333dfec
     }
   }
 }
@@ -775,14 +759,9 @@
     justify-content: center;
     width: 100%;
     padding-bottom: 5rem;
-<<<<<<< HEAD
-
-    .form_search {
-=======
     
     
     .form_search{
->>>>>>> 85a3333120f432ca23ddf1e7d215d9fe7333dfec
       display: flex;
       border: 1px solid #7b7b7b;
       min-width: 50%;
