--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -750,6 +750,10 @@ footer .legal ul li:last-child {
   padding-top: 70px;
   background-color: #ffffff;
 }
+.big-box div {
+  display: flex;
+  flex-direction: column;
+}
 .big-box .fancy-rainbow {
   margin: 0 auto;
   width: -webkit-fit-content;
@@ -773,6 +777,8 @@ footer .legal ul li:last-child {
   -webkit-text-fill-color: transparent;
 }
 .big-box .a-list {
+  display: flex;
+  margin: auto;
   padding: 20px;
 }
 .big-box .a-list button {
@@ -797,6 +803,14 @@ footer .legal ul li:last-child {
   align-items: center;
   gap: 50px;
 }
+.split-box div {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+.split-box ul {
+  display: flex;
+}
 .split-box .fancy-blue {
   margin: 0 auto;
   width: -webkit-fit-content;
@@ -810,6 +824,7 @@ footer .legal ul li:last-child {
 }
 .split-box .a-list {
   padding: 20px;
+  justify-content: center;
 }
 .split-box .a-list button {
   font-size: 17px;
@@ -823,6 +838,11 @@ footer .legal ul li:last-child {
   font-size: 21px;
   font-weight: 500;
   color: #0071e3;
+}
+
+.split-watch-2 {
+  padding-top: 12rem;
+  padding-bottom: 12rem;
 }
 
 @media screen and (max-width: 760px) {
