--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -289,7 +289,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      margin-left: 3rem;
+      margin-left: 20%;
       // margin-left: 15rem;
 
       .big_text_xl_light {
